Fixed bug when there was a white space after footer in projects page for width 900px and smaller

--- a/src/Components/Content/Projects/Project/Project.module.css
+++ b/src/Components/Content/Projects/Project/Project.module.css
@@ -123,9 +123,7 @@ span {
     }
 
     .dropdownMenu {
-
         padding: .3rem;
-
     }
 
     .dropdownMenuContainer {
@@ -133,9 +131,9 @@ span {
         padding: 0 5px;
         margin: 2px;
         border-radius: 1px;
-        line-height: 1.25em;
+        line-height: 1.2em;
         justify-content: space-evenly;
-        font-size: 0.8em;   
+        font-size: 0.7em;   
     }
 
     .skillsPic {
